# oni-transformer

./: .gitignore  .pre-commit-config.yaml  :wq  README.md  pyproject.toml
.github/workflows/: ruff_and_pytest_on_pr.yaml
src/oni_transformer/: __init__.py
src/oni_transformer/data/: __init__.py  aozora.py
src/oni_transformer/layers/: __init__.py  add_and_normalize.py  affine.py  concatenate.py  decoder.py  decoder_block.py  encoder.py  encoder_block.py  multi_head_attention.py  position_wise_feed_forwarding.py  positional_encoder.py  scaled_dot_product_attention.py  self_attention.py  single_head_attention.py  transformer.py  transformer_block.py
tests/oni_transformer/layers/: test_add_and_normalize.py  test_affine.py  test_concatenate.py  test_decoder.py  test_decoder_block.py  test_encoder.py  test_encoder_block.py  test_multi_head_attention.py  test_position_wise_feed_forwarding.py  test_positional_encoder.py  test_scaled_dot_product_attention.py  test_self_attention.py  test_single_head_attention.py  test_transformer.py  test_transformer_block.py
