[project]
name = "oni-transformer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "onion", email = "kosukekito38@gmail.com" }
]
dependencies = [
    "torch>=2.4.0",
    "chardet>=5.2.0",
    "tqdm>=4.66.5",
    "numpy>=2.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.7",
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "jupyterlab>=4.2.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/oni_transformer"]

[tool.ruff]
target-version = "py312"
line-length = 119

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["oni_transformer"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
